# filling-the-gapple-oauth

./: Cargo.toml  LICENSE  README.md
database/: README.md
database/client/src/: lib.rs
docs/vendor_oauth_setup/google/: Google OAuth Setup.md  README.md
server/: Cargo.toml
server/src/: lib.rs  main.rs  server_app_state.rs
server/src/site/: mod.rs
website_server/: Cargo.toml  cargo-generate.toml
website_server/src/: lib.rs  main.rs  server_context.rs
website_server/src/site/: mod.rs
website_server/src/site/style/: main.css
