[package]
name = "server"
version = "0.1.0"
edition = "2024"


[dependencies]
leptos = { version = "0.8.9" }
serde.workspace = true

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
oauth-axum = { version = "0.1.4", optional = true }
tower = { version = "0.5.2", optional = true }
axum = { version = "0.8.4", optional = true }
tower-http = { version = "0.6.6", features = ["trace"], optional = true }

[features]
default = []
ssr = [
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:axum",
    "dep:oauth-axum",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
]
csr = ["dep:tracing", "leptos/csr"]
hydrate = ["leptos/hydrate"]
